src/css/plugins/rtl.css
/*
* Meshki v1.5.0
* Copyright 2016-2017, Mohammad reza Hajianpour <hajianpour.mr@gmail.com>
* https://borderliner.github.io/Meshki/
* Free to use under the MIT license.
* https://opensource.org/licenses/MIT
*/

/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- General RTL
- Buttons
- Footer
- Forms
- Grid System
- Navbar
- Sidenav
- Tables
*/

/* General RTL
–––––––––––––––––––––––––––––––––––––––––––––––––– */
@font-face {
  font-family: 'Yekan';
  src: local('Yekan'),
  url('https://cdnjs.cloudflare.com/ajax/libs/meshki/1.5.0/fonts/yekan.woff') format('woff'),
  url('https://cdnjs.cloudflare.com/ajax/libs/meshki/1.5.0/fonts/yekan.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

body {
  direction: rtl;
  font-family: "Yekan", "Open Sans", sans-serif;
}

/* Buttons should use RTL font too */
button, input, optgroup, select, textarea {
  font-family: "Yekan", "Open Sans", sans-serif;
}

/* Keep the blocks of code LTR */
pre {
  direction: ltr;
}

/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Change the button size for RTL version */
a.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
  padding: 6px 15px;
}

/* Middle button of button couples for mobile version */
.button-couple button:not(:first-child):not(:last-child),
.button-couple a:not(:first-child):not(:last-child) {
  border-style: none;
  border-radius: 0;
  display: block;
  margin: -5px auto !important;
}

/* Button couples for tablets and upper */
@media (min-width: 768px) {
  /* First button */
  .button-couple button:first-child,
  .button-couple a:first-child {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-right: 0 !important;
    border-left-style: none;
    border-right-style: solid;
  }
  /* Middle button */
  .button-couple button:not(:first-child):not(:last-child),
  .button-couple a:not(:first-child):not(:last-child) {
    border-style: solid;
    display: inline;
    margin: -9px !important;
  }

  /* Last button */
  .button-couple button:last-child,
  .button-couple a:last-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-left: 0 !important;
    border-right-style: none;
    border-left-style: solid;
  }
}

/* Footer
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@media (min-width: 544px) {
  /* Footer text alignment for RTL */
  footer, .footer {
    text-align: right;
  }
}

/* Forms
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Select background must be on the left */
select {
  background-position: 2% 50%;
}

/* Margin fix for checkboxes and radio buttons */
input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before {
  margin: 4px auto auto 10px;
}

/* Grid System
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* RTL columns */
.col {
  float: right;
  margin-left: auto;
}

@media (min-width: 544px) {
  /* A bit of clean up for columns on tablets and up */
  .col:first-child {
    margin-right: 0;
    margin-left: auto;
  }

  .col {
    margin-right: 4%;
  }

  /* Offsets from right */
  .offset-by-one.col          { margin-right: 8.66666666667%; }
  .offset-by-two.col          { margin-right: 17.3333333333%; }
  .offset-by-three.col        { margin-right: 26%;            }
  .offset-by-four.col         { margin-right: 34.6666666667%; }
  .offset-by-five.col         { margin-right: 43.3333333333%; }
  .offset-by-six.col          { margin-right: 52%;            }
  .offset-by-seven.col        { margin-right: 60.6666666667%; }
  .offset-by-eight.col        { margin-right: 69.3333333333%; }
  .offset-by-nine.col         { margin-right: 78.0%;          }
  .offset-by-ten.col          { margin-right: 86.6666666667%; }
  .offset-by-eleven.col       { margin-right: 95.3333333333%; }

  .offset-by-one-third.col    { margin-right: 34.6666666667%; }
  .offset-by-two-thirds.col   { margin-right: 69.3333333333%; }

  .offset-by-one-half.col     { margin-right: 52%; }
}

/* Navbar
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Navbar buttons should be on the right side */
.nav ul li {
  float: right;
}

/* Logo of the website, it must be the first child of navbar*/
.nav ul li:first-child a.logo i {
  color: black;
}

.nav-dropdown-content a {
  text-align: right;
}

/* Sidenav
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Sidenav starts from the right */
.sidenav {
  left: auto;
  right: 0px;
}

/* Different padding of RTL Sidenav */
.sidenav a {
  padding: 8px 32px 8px 8px;
}

/* Sidenav close button should be on the left */
.sidenav-close-button {
  right: auto;
  left: 0;
  padding-right: 0 !important;
  padding-left: 30px !important;
}

/* Tables
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/* Align the table content to right */
td, th {
  text-align: right;
}

